cp4i/Prod/aceapp01-admin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aceapp01-admin-route
  namespace: mq-apac
spec:
  host: aceapp012e-adm2e-svrconn.chl.mq.ibm.com
  to:
    kind: Service
    name: aceapp01-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
