cp4i/Prod/repapp01-admin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: repapp01-admin-route
  namespace: mq-apac
spec:
  host: repapp012e-adm2e-svrconn.chl.mq.ibm.com
  to:
    kind: Service
    name: repapp01-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
